--- a/app/elements/transporteditreceipt-datepicker/transporteditreceipt-datepicker.html
+++ b/app/elements/transporteditreceipt-datepicker/transporteditreceipt-datepicker.html
@@ -39,7 +39,15 @@
         //this.$.service.feereport(this.showdate);
         this.showdate=moment(new Date()).format('DD/MM/YYYY');
         var d=new Date();
-        var dat=(d.getMonth()+1)+"/"+d.getDate()+"/"+d.getFullYear();
+        var mm=(d.getMonth()+1);
+        if(mm<10)
+          mm="0"+mm;
+        var dd=d.getDate();
+        if(dd<10)
+          dd="0"+dd;
+        var yy=d.getFullYear();
+        var dat=mm+"/"+dd+"/"+yy;
+        // var dat=(d.getMonth()+1)+"/"+d.getDate()+"/"+d.getFullYear();
         localStorage.setItem("curr_sess_receiptdate",dat);
       },
       FnShowDialog:function(){
@@ -62,7 +70,15 @@
           var days=parseInt((dd1 - dd2) / (1000 * 60 * 60 * 24));
           this.showdate = moment(this.$.picker.date).format('DD/MM/YYYY');
           var d=new Date(this.$.picker.date);
-          var dat=(d.getMonth()+1)+"/"+d.getDate()+"/"+d.getFullYear();
+          var mm=(d.getMonth()+1);
+          if(mm<10)
+            mm="0"+mm;
+          var dd=d.getDate();
+          if(dd<10)
+            dd="0"+dd;
+          var yy=d.getFullYear();
+          var dat=mm+"/"+dd+"/"+yy;
+          // var dat=(d.getMonth()+1)+"/"+d.getDate()+"/"+d.getFullYear();
           // alert(dat);
           localStorage.setItem("curr_sess_receiptdate",dat);          
         }
