--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -1917,7 +1917,7 @@
           }
         }
 
-        alert(JSON.stringify(bindarr));
+        // alert(JSON.stringify(bindarr));
         
         // var arr1=[];
         // var arr2=[];
