--- a/app/elements/transportfee-service/transportfee-service.html
+++ b/app/elements/transportfee-service/transportfee-service.html
@@ -921,18 +921,36 @@
             obj.insamount=insarr[i].amount;
             if(insarr[i].installment=="Lumpsum")
               insarr[i].installmentdate=currdate;
+            
+            if(insarr[i].changeflag==1){
             var dateParts = (insarr[i].installmentdate).split("/");
             var insdate=dateParts[1]+"/"+dateParts[0]+"/"+dateParts[2];
-            // alert(insdate);
             obj.insdate=insdate;
+            }
+            else{
+            obj.insdate=insarr[i].installmentdate;
+            }            
+            // alert(insdate);
             obj.inspaymentmode=insarr[i].paymentmode;
             obj.insstatus=insarr[i].paidstatus;
             obj.insfineamount=insarr[i].fineamount;
             // obj.ins1amount=insarr[i].fineamount;
             obj.inschequeno=insarr[i].chequeno;
+            // alert(insarr[i].chequedate);
+            if(insarr[i].paymentmode=='Cash'){
+            obj.inschequedate=insarr[i].chequedate;
+            }
+            else{
+            if(insarr[i].changeflag==1){
+            obj.inschequedate=insarr[i].chequedate;
+            }
+            else{
             var dateParts1 = (insarr[i].chequedate).split("/");
             var insdate1=dateParts1[1]+"/"+dateParts1[0]+"/"+dateParts1[2];
+            // alert(insdate1);
             obj.inschequedate=insdate1;
+            }
+            }
             // obj.inschequedate=insarr[i].chequedate;
             obj.insbankname=insarr[i].bankname;
             obj.inschequestatus=insarr[i].paidstatus;
@@ -957,17 +975,31 @@
             obj.paiddate=insarr[i].paiddate;
             obj.insamount=insarr[i].amount;
             // obj.insdate=insarr[i].installmentdate;
+            if(insarr[i].changeflag==1){
             var dateParts = (insarr[i].installmentdate).split("/");
             var insdate=dateParts[1]+"/"+dateParts[0]+"/"+dateParts[2];
             obj.insdate=insdate;
+            }
+            else{
+            obj.insdate=insarr[i].installmentdate;
+            } 
             obj.inspaymentmode=insarr[i].paymentmode;
             obj.insstatus=insarr[i].paidstatus;
             obj.insfineamount=insarr[i].fineamount;
             // obj.ins2amount=insarr[i].fineamount;
             obj.inschequeno=insarr[i].chequeno;
+            if(insarr[i].paymentmode=="Cash")
+               obj.inschequedate=insarr[i].chequedate;
+            else{ 
+            if(insarr[i].changeflag==1){
+            obj.inschequedate=insarr[i].chequedate;
+            }
+            else{
             var dateParts1 = (insarr[i].chequedate).split("/");
             var insdate1=dateParts1[1]+"/"+dateParts1[0]+"/"+dateParts1[2];
             obj.inschequedate=insdate1;
+            }
+            }
             // obj.inschequedate=insarr[i].chequedate;
             obj.insbankname=insarr[i].bankname;
             obj.inschequestatus=insarr[i].paidstatus;
@@ -1068,16 +1100,18 @@
                 // }
                 // else{
 
-                // var d=new Date(paymentarr[i].inschequedate);
-                // var dt=d.getDate();
-                // if(dt<9)
-                //     dt="0"+dt;                
-                // var mn=d.getMonth()+1;
-                // if(mn<9)
-                //     mn="0"+mn;
-                // var yr=d.getFullYear();
-                // var dat=dt+"-"+mn+"-"+yr;
-                // paymentarr[i].inschequedate=dat;
+                // if(localStorage.getItem("curr_sess_installmentdatechangeflag")==0){
+                var d=new Date(paymentarr[i].inschequedate);
+                var dt=d.getDate();
+                if(dt<9)
+                    dt="0"+dt;                
+                var mn=d.getMonth()+1;
+                if(mn<9)
+                    mn="0"+mn;
+                var yr=d.getFullYear();
+                var dat=dt+"/"+mn+"/"+yr;
+                paymentarr[i].inschequedate=dat;
+                // }
 
                 chequetotal=parseFloat(parseFloat(paymentarr[i].insamount)+parseFloat(chequetotal)+parseFloat(paymentarr[i].insfineamount)).toFixed(2);
                 chequeparticular.push({"slno":chequeno,"installment":paymentarr[i].installment,"bankname":paymentarr[i].insbankname,"chequeno":paymentarr[i].inschequeno,"chequedate":paymentarr[i].inschequedate,"installmentamount":paymentarr[i].insamount});
@@ -1085,16 +1119,16 @@
                 // }
             }
             else if(paymentarr[i].inspaymentmode=="Transfer"||paymentarr[i].inspaymentmode=="Card Swipe"){
-                // var d=new Date(paymentarr[i].inschequedate);
-                // var dt=d.getDate();
-                // if(dt<9)
-                //     dt="0"+dt;                
-                // var mn=d.getMonth()+1;
-                // if(mn<9)
-                //     mn="0"+mn;
-                // var yr=d.getFullYear();
-                // var dat=dt+"-"+mn+"-"+yr;
-                // paymentarr[i].inschequedate=dat;
+                var d=new Date(paymentarr[i].inschequedate);
+                var dt=d.getDate();
+                if(dt<9)
+                    dt="0"+dt;                
+                var mn=d.getMonth()+1;
+                if(mn<9)
+                    mn="0"+mn;
+                var yr=d.getFullYear();
+                var dat=dt+"/"+mn+"/"+yr;
+                paymentarr[i].inschequedate=dat;
                 if(paymentarr[i].insfineamount==""||paymentarr[i].insfineamount==null)
             paymentarr[i].insfineamount=0;
                 transfertotal=parseFloat(parseFloat(paymentarr[i].insamount)+parseFloat(transfertotal)+parseFloat(paymentarr[i].insfineamount)).toFixed(2);
@@ -1246,34 +1280,34 @@
             if(feereceiptarr[i].modeofpayment=="Cheque"){
                 var d=new Date(feereceiptarr[i].receiptdate);
                 var dt=d.getDate();
-                if(dt<9)
+                if(dt<=9)
                     dt="0"+dt;                
                 var mn=d.getMonth()+1;
-                if(mn<9)
+                if(mn<=9)
                     mn="0"+mn;
                 var yr=d.getFullYear();
-                var dat=dt+"-"+mn+"-"+yr;
+                var dat=dt+"/"+mn+"/"+yr;
                 feereceiptarr[i].receiptdate=dat
             }
             else{
                 var d1=new Date(feereceiptarr[i].paiddate);
                 var d2=new Date(feereceiptarr[i].receiptdate);
                 var dt1=d1.getDate();
-                if(dt1<9)
+                if(dt1<=9)
                     dt1="0"+dt1;
                 var mn1=d1.getMonth()+1;
-                if(mn1<9)
+                if(mn1<=9)
                     mn1="0"+mn1;
                 var yr1=d1.getFullYear();
-                var dat1=dt1+"-"+mn1+"-"+yr1;
+                var dat1=dt1+"/"+mn1+"/"+yr1;
                 var dt2=d2.getDate();
-                if(dt2<9)
+                if(dt2<=9)
                     dt2="0"+dt2;
                 var mn2=d2.getMonth()+1;
-                if(mn2<9)
+                if(mn2<=9)
                     mn2="0"+mn2;
                 var yr2=d2.getFullYear();
-                var dat2=dt2+"-"+mn2+"-"+yr2;
+                var dat2=dt2+"/"+mn2+"/"+yr2;
                 feereceiptarr[i].paiddate=dat1;
                 feereceiptarr[i].receiptdate=dat2;
             }
@@ -1458,14 +1492,21 @@
         var arr=[];
         arr.push(obj);
 
-        if(arrr.length>0){
+        if(arrr!='no rows'){
           for(var i=0;i<arrr.length;i++){
             arrr[i].sno=parseInt(i)+1;
             arrr[i].flag=0;
             arrr[i].hidebtn=false;
             // arrr[i].span=11;
             var d=new Date(arrr[i].cheque_date);
-            var dat=d.getDate()+"/"+(d.getMonth()+1)+"/"+d.getFullYear();
+            var mm=(d.getMonth()+1);
+            if(mm<10)
+              mm="0"+mm;
+            var dd=d.getDate();
+            if(dd<10)
+              dd="0"+dd;
+            var yy=d.getFullYear();
+            var dat=dd+"/"+mm+"/"+yy;
             arrr[i].cheque_date=dat;
             arr.push(arrr[i]);
           }
@@ -1473,8 +1514,8 @@
         document.querySelector('transport-editdelete-cheque').FnSetChequeArray(arr);
         }
         else{
-            arr=[];
-           document.querySelector('transport-editdelete-cheque').chequearr=arr;
+        arr=[];
+        document.querySelector('transport-editdelete-cheque').chequearr=arr;
         document.querySelector('transport-editdelete-cheque').FnSetChequeArray(arr); 
         }
       },
@@ -1523,7 +1564,14 @@
         obj.fromdate=localStorage.getItem("localsess_from_date");
         obj.todate=localStorage.getItem("localsess_to_date");
         var d=new Date();
-        var currdate=(d.getMonth()+1)+"/"+d.getDate()+"/"+d.getFullYear();
+        var mm=(d.getMonth()+1);
+        if(mm<10)
+          mm="0"+mm;
+        var dd=d.getDate();
+        if(dd<10)
+          dd="0"+dd;
+        var yy=d.getFullYear();
+        var currdate=mm+"/"+dd+"/"+yy;
         obj.currdate=currdate;
         this.fetchtransportpdccollectionparam=obj;
         this.$.fetchtransportpdccollectionajax.generateRequest();
@@ -1553,9 +1601,23 @@
         }
         for(var i=0;i<chequearr.length;i++){
             var d=new Date(chequearr[i].cheque_date);
-            chequearr[i].cheque_date=d.getDate()+"/"+(d.getMonth()+1)+"/"+d.getFullYear();
+            var mm=(d.getMonth()+1);
+            if(mm<10)
+              mm="0"+mm;
+            var dd=d.getDate();
+            if(dd<10)
+              dd="0"+dd;
+            var yy=d.getFullYear();
+            chequearr[i].cheque_date=dd+"/"+mm+"/"+yy;
             var d1=new Date(chequearr[i].paid_date);
-            chequearr[i].paid_date=d1.getDate()+"/"+(d1.getMonth()+1)+"/"+d1.getFullYear();
+            var mm1=(d1.getMonth()+1);
+            if(mm1<10)
+              mm1="0"+mm1;
+            var dd1=d1.getDate();
+            if(dd1<10)
+              dd1="0"+dd1;
+            var yy1=d1.getFullYear();
+            chequearr[i].paid_date=dd1+"/"+mm1+"/"+yy1;
         }
         document.querySelector('transport-pdc-report').total=total;
         document.querySelector('transport-pdc-report').transportpdccollectionarr=chequearr;
@@ -1582,9 +1644,23 @@
 
         for(var i=0;i<chequesarr.length;i++){
             var d=new Date(chequesarr[i].cheque_date);
-            chequesarr[i].cheque_date=d.getDate()+"/"+(d.getMonth()+1)+"/"+d.getFullYear();
+            var mm=(d.getMonth()+1);
+            if(mm<10)
+              mm="0"+mm;
+            var dd=d.getDate();
+            if(dd<10)
+              dd="0"+dd;
+            var yy=d.getFullYear();
+            chequesarr[i].cheque_date=dd+"/"+mm+"/"+yy;
             var d1=new Date(chequesarr[i].paid_date);
-            chequesarr[i].paid_date=d1.getDate()+"/"+(d1.getMonth()+1)+"/"+d1.getFullYear();
+            var mm1=(d1.getMonth()+1);
+            if(mm1<10)
+              mm1="0"+mm1;
+            var dd1=d1.getDate();
+            if(dd1<10)
+              dd1="0"+dd1;
+            var yy1=d1.getFullYear();
+            chequesarr[i].paid_date=dd1+"/"+mm1+"/"+yy1;
         }
 
         var collection=[];
@@ -1670,7 +1746,14 @@
         // alert(JSON.stringify(collection));
         for(var i=0;i<collection.length;i++){
             var d=new Date(collection[i].receiveddate);
-            var dat=d.getDate()+"/"+(d.getMonth()+1)+"/"+d.getFullYear();
+            var mm=(d.getMonth()+1);
+            if(mm<10)
+              mm="0"+mm;
+            var dd=d.getDate();
+            if(dd<10)
+              dd="0"+dd;
+            var yy=d.getFullYear();
+            var dat=dd+"/"+mm+"/"+yy;
             collection[i].receiveddate=dat;
         }
         document.querySelector('transportdaily-collection-report').transportdaycollectionarr=collection;
@@ -1902,6 +1985,10 @@
               var m=d.getMonth()+1;
               var dd=d.getDate();
               var y=d.getFullYear();
+              if(m<10)
+                m="0"+m;
+              if(dd<10)
+                dd="0"+dd;
               var currdate=m+"/"+dd+"/"+y;
               obj.installment_date=currdate;
               obj.installment="Lumpsum";
@@ -2018,12 +2105,26 @@
         for(var i=0;i<feearr.length;i++){
             if(feearr[i].installment=='Installment1'){
             var d=new Date();
-            var dd=d.getDate()+"/"+(d.getMonth()+1)+"/"+d.getFullYear();
+            var mm=(d.getMonth()+1);
+            if(mm<10)
+              mm="0"+mm;
+            var dd=d.getDate();
+            if(dd<10)
+              dd="0"+dd;
+            var yy=d.getFullYear();
+            var dd=dd+"/"+mm+"/"+yy;
             feearr[i].installment_date=dd;
             }
             else{
             var d=new Date(feearr[i].installment_date);
-            var dd=d.getDate()+"/"+(d.getMonth()+1)+"/"+d.getFullYear();
+            var mm=(d.getMonth()+1);
+            if(mm<10)
+              mm="0"+mm;
+            var dd=d.getDate();
+            if(dd<10)
+              dd="0"+dd;
+            var yy=d.getFullYear();
+            var dd=dd+"/"+mm+"/"+yy;
             feearr[i].installment_date=dd;
             }
         }
