discount and already paid scenario handled in CRM fee payment

--- a/app/elements/installment-card/installment-card.html
+++ b/app/elements/installment-card/installment-card.html
@@ -109,7 +109,7 @@
    <!-- <paper-input id="paiddate" hidden$="{{hiddeninputflag}}" value="{{chequedate}}"></paper-input> -->
    <!-- <paper-input id="receiptdate" hidden$="{{hiddeninputflag}}" value="{{receiptdate}}"></paper-input> -->
    
-  <span class="panel-icon" style="margin-top: 1.5%;right: 0%;position: absolute;" disabled$="{{paidflag}}" hidden$="{{hiddenflag}}"><a href="" on-click="FnEditPayment" disabled$="{{paidflag}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></span>
+  <span class="panel-icon" style="margin-top: 1.5%;right: 0%;position: absolute;" disabled$="{{paidflag}}" hidden$="{{paidflag}}"><a href="" on-click="FnEditPayment" disabled$="{{paidflag}}" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></span>
   <span class="panel-icon" style="margin-top: 1.5%;right: 0%;position: absolute;" hidden$="{{hiddeninputflag}}"><a href="" on-click="FnSavePayment"><i class="fa fa-save" aria-hidden="true"></i></a></span>
   </div>
 
