--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -382,10 +382,10 @@
             <li id="consolidatedcollectiondashboard">
             <a href="" aria-hidden="true" on-click="FnCollectionDashboard">Consolidated Collection Dashboard<span class="fa arrow"></span></a>
             </li>
-            <li id="feepaidduereport">
+            <li id="feepaidduereport" hidden>
             <a href="" aria-hidden="true" on-click="FnDetailduereport">Fee Paid & Due report<span class="fa arrow"></span></a>
             </li>
-            <li id="processreport">
+            <li id="processreport" hidden>
             <a href="" aria-hidden="true" on-click="FnProcessreport">Process Report<span class="fa arrow"></span></a>
             </li>
             </ul>
